src/antlr4/predicateParser.ts
// Generated from d:/DIS_platform/src/antlr4/predicate.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { predicateVisitor } from "./predicateVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class predicateParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly ID = 5;
    public static readonly INT = 6;
    public static readonly DOUBLE = 7;
    public static readonly STRING = 8;
    public static readonly TAU = 9;
    public static readonly AND = 10;
    public static readonly OR = 11;
    public static readonly NOT = 12;
    public static readonly EXISTS = 13;
    public static readonly IN = 14;
    public static readonly EQ = 15;
    public static readonly NEQ = 16;
    public static readonly GEQ = 17;
    public static readonly LEQ = 18;
    public static readonly GT = 19;
    public static readonly LT = 20;
    public static readonly WS = 21;
    public static readonly RULE_rvalue = 0;
    public static readonly RULE_exp = 1;
    public static readonly RULE_statExp = 2;
    public static readonly RULE_samplingExp = 3;
    public static readonly RULE_condition = 4;
    public static readonly RULE_argsList = 5;
    public static readonly RULE_attr = 6;

    public static readonly literalNames = [
        null, "'('", "')'", "','", "'.'", null, null, null, null, "'\\tau'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, "ID", "INT", "DOUBLE", "STRING", "TAU", 
        "AND", "OR", "NOT", "EXISTS", "IN", "EQ", "NEQ", "GEQ", "LEQ", "GT", 
        "LT", "WS"
    ];
    public static readonly ruleNames = [
        "rvalue", "exp", "statExp", "samplingExp", "condition", "argsList", 
        "attr",
    ];

    public get grammarFileName(): string { return "predicate.g4"; }
    public get literalNames(): (string | null)[] { return predicateParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return predicateParser.symbolicNames; }
    public get ruleNames(): string[] { return predicateParser.ruleNames; }
    public get serializedATN(): number[] { return predicateParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, predicateParser._ATN, predicateParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public rvalue(): RvalueContext {
        let localContext = new RvalueContext(this.context, this.state);
        this.enterRule(localContext, 0, predicateParser.RULE_rvalue);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 14;
            localContext._op = this.tokenStream.LT(1);
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 448) !== 0))) {
                localContext._op = this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public exp(): ExpContext;
    public exp(_p: number): ExpContext;
    public exp(_p?: number): ExpContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExpContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, predicateParser.RULE_exp, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 27;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case predicateParser.NOT:
                {
                localContext = new NotExpContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 17;
                this.match(predicateParser.NOT);
                this.state = 18;
                this.exp(5);
                }
                break;
            case predicateParser.ID:
                {
                localContext = new BinaryExpContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 19;
                this.statExp();
                this.state = 20;
                (localContext as BinaryExpContext)._op = this.tokenStream.LT(1);
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 2064384) !== 0))) {
                    (localContext as BinaryExpContext)._op = this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 21;
                this.rvalue();
                }
                break;
            case predicateParser.INT:
            case predicateParser.DOUBLE:
            case predicateParser.STRING:
                {
                localContext = new InExpContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 23;
                this.rvalue();
                this.state = 24;
                (localContext as InExpContext)._op = this.match(predicateParser.IN);
                this.state = 25;
                this.statExp();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 37;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this._parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 35;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
                    case 1:
                        {
                        localContext = new AndExpContext(new ExpContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, predicateParser.RULE_exp);
                        this.state = 29;
                        if (!(this.precpred(this.context, 4))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 4)");
                        }
                        this.state = 30;
                        this.match(predicateParser.AND);
                        this.state = 31;
                        this.exp(5);
                        }
                        break;
                    case 2:
                        {
                        localContext = new OrExpContext(new ExpContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, predicateParser.RULE_exp);
                        this.state = 32;
                        if (!(this.precpred(this.context, 3))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 3)");
                        }
                        this.state = 33;
                        this.match(predicateParser.OR);
                        this.state = 34;
                        this.exp(4);
                        }
                        break;
                    }
                    }
                }
                this.state = 39;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public statExp(): StatExpContext {
        let localContext = new StatExpContext(this.context, this.state);
        this.enterRule(localContext, 4, predicateParser.RULE_statExp);
        try {
            this.state = 52;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
            case 1:
                localContext = new SingleVarStatExpContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 40;
                (localContext as SingleVarStatExpContext)._func = this.match(predicateParser.ID);
                this.state = 41;
                this.match(predicateParser.T__0);
                this.state = 42;
                this.attr();
                this.state = 43;
                this.match(predicateParser.T__1);
                }
                break;
            case 2:
                localContext = new RegressionStatExpContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 45;
                (localContext as RegressionStatExpContext)._func = this.match(predicateParser.ID);
                this.state = 46;
                this.match(predicateParser.T__0);
                this.state = 47;
                this.samplingExp();
                this.state = 48;
                this.match(predicateParser.T__2);
                this.state = 49;
                this.attr();
                this.state = 50;
                this.match(predicateParser.T__1);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public samplingExp(): SamplingExpContext {
        let localContext = new SamplingExpContext(this.context, this.state);
        this.enterRule(localContext, 6, predicateParser.RULE_samplingExp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 54;
            localContext._func = this.match(predicateParser.ID);
            this.state = 55;
            this.match(predicateParser.T__0);
            this.state = 56;
            this.attr();
            this.state = 59;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                {
                this.state = 57;
                this.match(predicateParser.T__2);
                this.state = 58;
                this.argsList();
                }
                break;
            }
            this.state = 63;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 3) {
                {
                this.state = 61;
                this.match(predicateParser.T__2);
                this.state = 62;
                this.condition(0);
                }
            }

            this.state = 65;
            this.match(predicateParser.T__1);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public condition(): ConditionContext;
    public condition(_p: number): ConditionContext;
    public condition(_p?: number): ConditionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ConditionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 8;
        this.enterRecursionRule(localContext, 8, predicateParser.RULE_condition, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 73;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case predicateParser.ID:
                {
                localContext = new SingleConditionContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 68;
                this.match(predicateParser.ID);
                this.state = 69;
                (localContext as SingleConditionContext)._op = this.tokenStream.LT(1);
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 2064384) !== 0))) {
                    (localContext as SingleConditionContext)._op = this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 70;
                this.rvalue();
                }
                break;
            case predicateParser.NOT:
                {
                localContext = new NotConditionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 71;
                this.match(predicateParser.NOT);
                this.state = 72;
                this.condition(3);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 83;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 8, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this._parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 81;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
                    case 1:
                        {
                        localContext = new AndConditionContext(new ConditionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, predicateParser.RULE_condition);
                        this.state = 75;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 76;
                        this.match(predicateParser.AND);
                        this.state = 77;
                        this.condition(3);
                        }
                        break;
                    case 2:
                        {
                        localContext = new OrConditionContext(new ConditionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, predicateParser.RULE_condition);
                        this.state = 78;
                        if (!(this.precpred(this.context, 1))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                        }
                        this.state = 79;
                        this.match(predicateParser.OR);
                        this.state = 80;
                        this.condition(2);
                        }
                        break;
                    }
                    }
                }
                this.state = 85;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 8, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public argsList(): ArgsListContext {
        let localContext = new ArgsListContext(this.context, this.state);
        this.enterRule(localContext, 10, predicateParser.RULE_argsList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 86;
            this.match(predicateParser.T__0);
            this.state = 87;
            this.attr();
            this.state = 92;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 3) {
                {
                {
                this.state = 88;
                this.match(predicateParser.T__2);
                this.state = 89;
                this.attr();
                }
                }
                this.state = 94;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 95;
            this.match(predicateParser.T__1);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public attr(): AttrContext {
        let localContext = new AttrContext(this.context, this.state);
        this.enterRule(localContext, 12, predicateParser.RULE_attr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 97;
            this.match(predicateParser.ID);
            this.state = 98;
            this.match(predicateParser.T__3);
            this.state = 99;
            this.match(predicateParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public override sempred(localContext: antlr.RuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 1:
            return this.exp_sempred(localContext as ExpContext, predIndex);
        case 4:
            return this.condition_sempred(localContext as ConditionContext, predIndex);
        }
        return true;
    }
    private exp_sempred(localContext: ExpContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 4);
        case 1:
            return this.precpred(this.context, 3);
        }
        return true;
    }
    private condition_sempred(localContext: ConditionContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 2:
            return this.precpred(this.context, 2);
        case 3:
            return this.precpred(this.context, 1);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!predicateParser.__ATN) {
            predicateParser.__ATN = new antlr.ATNDeserializer().deserialize(predicateParser._serializedATN);
        }

        return predicateParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(predicateParser.literalNames, predicateParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return predicateParser.vocabulary;
    }

    private static readonly decisionsToDFA = predicateParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class RvalueContext extends antlr.ParserRuleContext {
    public _op?: Token | null;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public INT(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.INT, 0);
    }
    public DOUBLE(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.DOUBLE, 0);
    }
    public STRING(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.STRING, 0);
    }
    public override get ruleIndex(): number {
        return predicateParser.RULE_rvalue;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitRvalue) {
            return visitor.visitRvalue(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ExpContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public override get ruleIndex(): number {
        return predicateParser.RULE_exp;
    }
    public override copyFrom(ctx: ExpContext): void {
        super.copyFrom(ctx);
    }
}
export class BinaryExpContext extends ExpContext {
    public _op?: Token | null;
    public constructor(ctx: ExpContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public statExp(): StatExpContext {
        return this.getRuleContext(0, StatExpContext)!;
    }
    public rvalue(): RvalueContext {
        return this.getRuleContext(0, RvalueContext)!;
    }
    public GT(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.GT, 0);
    }
    public LT(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.LT, 0);
    }
    public EQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.EQ, 0);
    }
    public LEQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.LEQ, 0);
    }
    public GEQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.GEQ, 0);
    }
    public NEQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.NEQ, 0);
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitBinaryExp) {
            return visitor.visitBinaryExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class AndExpContext extends ExpContext {
    public constructor(ctx: ExpContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public exp(): ExpContext[];
    public exp(i: number): ExpContext | null;
    public exp(i?: number): ExpContext[] | ExpContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExpContext);
        }

        return this.getRuleContext(i, ExpContext);
    }
    public AND(): antlr.TerminalNode {
        return this.getToken(predicateParser.AND, 0)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitAndExp) {
            return visitor.visitAndExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class OrExpContext extends ExpContext {
    public constructor(ctx: ExpContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public exp(): ExpContext[];
    public exp(i: number): ExpContext | null;
    public exp(i?: number): ExpContext[] | ExpContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExpContext);
        }

        return this.getRuleContext(i, ExpContext);
    }
    public OR(): antlr.TerminalNode {
        return this.getToken(predicateParser.OR, 0)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitOrExp) {
            return visitor.visitOrExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class NotExpContext extends ExpContext {
    public constructor(ctx: ExpContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public NOT(): antlr.TerminalNode {
        return this.getToken(predicateParser.NOT, 0)!;
    }
    public exp(): ExpContext {
        return this.getRuleContext(0, ExpContext)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitNotExp) {
            return visitor.visitNotExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class InExpContext extends ExpContext {
    public _op?: Token | null;
    public constructor(ctx: ExpContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public rvalue(): RvalueContext {
        return this.getRuleContext(0, RvalueContext)!;
    }
    public statExp(): StatExpContext {
        return this.getRuleContext(0, StatExpContext)!;
    }
    public IN(): antlr.TerminalNode {
        return this.getToken(predicateParser.IN, 0)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitInExp) {
            return visitor.visitInExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class StatExpContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public override get ruleIndex(): number {
        return predicateParser.RULE_statExp;
    }
    public override copyFrom(ctx: StatExpContext): void {
        super.copyFrom(ctx);
    }
}
export class RegressionStatExpContext extends StatExpContext {
    public _func?: Token | null;
    public constructor(ctx: StatExpContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public samplingExp(): SamplingExpContext {
        return this.getRuleContext(0, SamplingExpContext)!;
    }
    public attr(): AttrContext {
        return this.getRuleContext(0, AttrContext)!;
    }
    public ID(): antlr.TerminalNode {
        return this.getToken(predicateParser.ID, 0)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitRegressionStatExp) {
            return visitor.visitRegressionStatExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class SingleVarStatExpContext extends StatExpContext {
    public _func?: Token | null;
    public constructor(ctx: StatExpContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public attr(): AttrContext {
        return this.getRuleContext(0, AttrContext)!;
    }
    public ID(): antlr.TerminalNode {
        return this.getToken(predicateParser.ID, 0)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitSingleVarStatExp) {
            return visitor.visitSingleVarStatExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class SamplingExpContext extends antlr.ParserRuleContext {
    public _func?: Token | null;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public attr(): AttrContext {
        return this.getRuleContext(0, AttrContext)!;
    }
    public ID(): antlr.TerminalNode {
        return this.getToken(predicateParser.ID, 0)!;
    }
    public argsList(): ArgsListContext | null {
        return this.getRuleContext(0, ArgsListContext);
    }
    public condition(): ConditionContext | null {
        return this.getRuleContext(0, ConditionContext);
    }
    public override get ruleIndex(): number {
        return predicateParser.RULE_samplingExp;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitSamplingExp) {
            return visitor.visitSamplingExp(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ConditionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public override get ruleIndex(): number {
        return predicateParser.RULE_condition;
    }
    public override copyFrom(ctx: ConditionContext): void {
        super.copyFrom(ctx);
    }
}
export class OrConditionContext extends ConditionContext {
    public constructor(ctx: ConditionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public condition(): ConditionContext[];
    public condition(i: number): ConditionContext | null;
    public condition(i?: number): ConditionContext[] | ConditionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ConditionContext);
        }

        return this.getRuleContext(i, ConditionContext);
    }
    public OR(): antlr.TerminalNode {
        return this.getToken(predicateParser.OR, 0)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitOrCondition) {
            return visitor.visitOrCondition(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class AndConditionContext extends ConditionContext {
    public constructor(ctx: ConditionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public condition(): ConditionContext[];
    public condition(i: number): ConditionContext | null;
    public condition(i?: number): ConditionContext[] | ConditionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ConditionContext);
        }

        return this.getRuleContext(i, ConditionContext);
    }
    public AND(): antlr.TerminalNode {
        return this.getToken(predicateParser.AND, 0)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitAndCondition) {
            return visitor.visitAndCondition(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class NotConditionContext extends ConditionContext {
    public constructor(ctx: ConditionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public NOT(): antlr.TerminalNode {
        return this.getToken(predicateParser.NOT, 0)!;
    }
    public condition(): ConditionContext {
        return this.getRuleContext(0, ConditionContext)!;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitNotCondition) {
            return visitor.visitNotCondition(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
export class SingleConditionContext extends ConditionContext {
    public _op?: Token | null;
    public constructor(ctx: ConditionContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public ID(): antlr.TerminalNode {
        return this.getToken(predicateParser.ID, 0)!;
    }
    public rvalue(): RvalueContext {
        return this.getRuleContext(0, RvalueContext)!;
    }
    public GT(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.GT, 0);
    }
    public LT(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.LT, 0);
    }
    public EQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.EQ, 0);
    }
    public LEQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.LEQ, 0);
    }
    public GEQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.GEQ, 0);
    }
    public NEQ(): antlr.TerminalNode | null {
        return this.getToken(predicateParser.NEQ, 0);
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitSingleCondition) {
            return visitor.visitSingleCondition(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ArgsListContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public attr(): AttrContext[];
    public attr(i: number): AttrContext | null;
    public attr(i?: number): AttrContext[] | AttrContext | null {
        if (i === undefined) {
            return this.getRuleContexts(AttrContext);
        }

        return this.getRuleContext(i, AttrContext);
    }
    public override get ruleIndex(): number {
        return predicateParser.RULE_argsList;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitArgsList) {
            return visitor.visitArgsList(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class AttrContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public ID(): antlr.TerminalNode[];
    public ID(i: number): antlr.TerminalNode | null;
    public ID(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(predicateParser.ID);
    	} else {
    		return this.getToken(predicateParser.ID, i);
    	}
    }
    public override get ruleIndex(): number {
        return predicateParser.RULE_attr;
    }
    public override accept<Result>(visitor: predicateVisitor<Result>): Result | null {
        if (visitor.visitAttr) {
            return visitor.visitAttr(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
